No code changes made

--- a/index.html
+++ b/index.html
@@ -172,34 +172,333 @@
           Your browser does not support the video tag.
         </video>
       </div>
+
+      <div>
+        <nav class="flex items-center justify-between p-4">
+          <div class="flex items-center space-x-2">
+            <img
+              alt="Logo with a green star-like shape"
+              class="w-8 h-8"
+              height="30"
+              src="https://storage.googleapis.com/a1aa/image/WaL9MOZorQHDHOgW7B7REta8yOf90N8ULNe-6QB-zPs.jpg"
+              width="30"
+            />
+            <span class="text-xl font-bold"> Fund </span>
+          </div>
+          <div class="flex items-center space-x-8">
+            <a class="text-gray-700" href="#"> Home </a>
+            <a class="text-gray-700" href="#"> Donation </a>
+            <a class="text-gray-700" href="#"> How It Works </a>
+            <a class="text-gray-700" href="#"> About Us </a>
+          </div>
+          <div>
+            <button class="bg-lime-300 text-gray-700 px-4 py-2 rounded-full">
+              Download App
+            </button>
+          </div>
+        </nav>
+      </div>
+      <div class="image-container rounded-lg mb-8">
+        <img src="public/fund.png" alt="Fund Image" class="w-full rounded-lg" />
+      </div>
+      <!-- fund fast as flash -->
+      <div class="container mx-auto px-4 py-12">
+        <h1 class="text-4xl font-bold mb-2">
+          Fund, Fast As <span class="italic">Flash</span>
+        </h1>
+        <p class="text-lg text-gray-500 mb-8">
+          Fundraise at the speed of thought! Elevate your cause in just a minute
+          with our lightning-fast fundraising platform.
+        </p>
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+          <div class="bg-gray-100 shadow-md rounded-lg p-6">
+            <div class="flex justify-start mb-4">
+              <div class="bg-green-100 rounded-full p-4">
+                <i class="fas fa-lock text-green-500 text-2xl"></i>
+              </div>
+            </div>
+            <div>
+              <h2 class="text-xl font-bold mb-2 text-left">Ignite Impact</h2>
+              <p class="text-gray-500 text-left">
+                Spark joy by sharing your cause and the positive impact it
+                brings. Clearly express how contributions will make a meaningful
+                difference.
+              </p>
+            </div>
+          </div>
+          <div class="bg-gray-100 shadow-md rounded-lg p-6">
+            <div class="flex justify-start mb-4">
+              <div class="bg-green-100 rounded-full p-4">
+                <i class="fas fa-bolt text-green-500 text-2xl"></i>
+              </div>
+            </div>
+            <div>
+              <h2 class="text-xl font-bold mb-2 text-left">Spread The Word</h2>
+              <p class="text-gray-500 text-left">
+                Leverage the speed of social media and online networks. Share
+                your fundraising campaign swiftly across various platforms.
+              </p>
+            </div>
+          </div>
+          <div class="bg-gray-100 shadow-md rounded-lg p-6">
+            <div class="flex justify-start mb-4">
+              <div class="bg-green-100 rounded-full p-4">
+                <i class="fas fa-globe text-green-500 text-2xl"></i>
+              </div>
+            </div>
+            <div>
+              <h2 class="text-xl font-bold mb-2 text-left">Connect Globally</h2>
+              <p class="text-gray-500 text-left">
+                Build a strong social network around your cause. Encourage
+                supporters to share the campaign within their local communities.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- urgent fundraising -->
+      <div class="max-w-7xl mx-auto p-4">
+        <h1 class="text-3xl font-bold mb-2">Urgent Fundraising!</h1>
+        <p class="text-gray-600 mb-6">
+          Time is of the essence! Join our mission NOW to make an immediate
+          impact. Every second counts!
+        </p>
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+          <div class="bg-white rounded-lg shadow-md overflow-hidden">
+            <img
+              alt="Person wearing yellow gloves planting a small plant in the ground"
+              class="w-full h-48 object-cover"
+              height="400"
+              src="https://storage.googleapis.com/a1aa/image/79qrWnkt-u0BGuUQRvCQCId2YuWhRK0M-5CkE8LtojE.jpg"
+              width="600"
+            />
+            <div class="p-4">
+              <p class="text-sm text-gray-500">We Care</p>
+              <h2 class="text-lg font-bold">GreenFund: Sustain Earth Now</h2>
+              <p class="text-xl font-bold text-gray-800 mt-2">$50,240.210</p>
+              <div class="flex items-center justify-between mt-2">
+                <div class="w-full bg-gray-200 rounded-full h-2.5">
+                  <div
+                    class="bg-lime-500 h-2.5 rounded-full"
+                    style="width: 80%"
+                  ></div>
+                </div>
+                <span class="text-sm text-gray-500 ml-2"> 7 days left </span>
+              </div>
+            </div>
+          </div>
+          <div class="bg-white rounded-lg shadow-md overflow-hidden">
+            <img
+              alt="Person in a wheelchair being assisted by another person"
+              class="w-full h-48 object-cover"
+              height="400"
+              src="https://storage.googleapis.com/a1aa/image/y8wRPIO0PhOHWclQSgX9L-MlNxMFam__DPanT8DlZyE.jpg"
+              width="600"
+            />
+            <div class="p-4">
+              <p class="text-sm text-gray-500">Unicef</p>
+              <h2 class="text-lg font-bold">SeniorHealth: Support Campaign</h2>
+              <p class="text-xl font-bold text-gray-800 mt-2">$4,240.310</p>
+              <div class="flex items-center justify-between mt-2">
+                <div class="w-full bg-gray-200 rounded-full h-2.5">
+                  <div
+                    class="bg-lime-500 h-2.5 rounded-full"
+                    style="width: 50%"
+                  ></div>
+                </div>
+                <span class="text-sm text-gray-500 ml-2"> 19 days left </span>
+              </div>
+            </div>
+          </div>
+          <div class="bg-white rounded-lg shadow-md overflow-hidden">
+            <img
+              alt="Group of people in green shirts distributing aid"
+              class="w-full h-48 object-cover"
+              height="400"
+              src="https://storage.googleapis.com/a1aa/image/yJd7uBD7yGQHZsc-bloX8hlyiQc05LRu64spFbjsZNw.jpg"
+              width="600"
+            />
+            <div class="p-4">
+              <p class="text-sm text-gray-500">Unity Foundation</p>
+              <h2 class="text-lg font-bold">DisasterCare: Urgent Support</h2>
+              <p class="text-xl font-bold text-gray-800 mt-2">$2,100.210</p>
+              <div class="flex items-center justify-between mt-2">
+                <div class="w-full bg-gray-200 rounded-full h-2.5">
+                  <div
+                    class="bg-lime-500 h-2.5 rounded-full"
+                    style="width: 30%"
+                  ></div>
+                </div>
+                <span class="text-sm text-gray-500 ml-2"> 23 days </span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Join Fundraisers now -->
+      <div class="flex flex-col items-center mt-8 pt-8">
+        <div class="flex justify-between w-full max-w-4xl mb-4">
+          <div class="flex flex-col justify-between">
+            <img
+              alt="Black and white image of a child"
+              class="w-24 h-32 object-cover rounded mb-4"
+              height="128"
+              src="https://storage.googleapis.com/a1aa/image/Q7WxNZuneywk16EBuwahlHCiWTlWQF3OxPjB4sYjG78.jpg"
+              width="100"
+            />
+            <img
+              alt="Black and white image of children"
+              class="w-24 h-24 object-cover rounded"
+              height="100"
+              src="https://storage.googleapis.com/a1aa/image/loa7AuBrRKriAflHuBuzOPga21nJpMTsDqmPKfFuzOo.jpg"
+              width="100"
+            />
+          </div>
+          <div class="flex flex-col items-center px-8">
+            <h2 class="text-lg font-normal text-gray-700 mb-2">
+              Be The Part Of FundRaisers With Over
+            </h2>
+            <h1 class="text-8xl font-bold text-black mb-2">217,924+</h1>
+            <h3 class="text-lg font-normal text-gray-700 mb-6">
+              People From Around The World Joined
+            </h3>
+            <button
+              class="bg-lime-500 text-white text-lg font-bold py-2 px-6 rounded-full hover:bg-lime-600 transition duration-300"
+            >
+              Join FundRaisers Now!
+            </button>
+          </div>
+          <div class="flex flex-col justify-between">
+            <img
+              alt="Black and white image of children"
+              class="w-24 h-32 object-cover rounded mb-4"
+              height="128"
+              src="https://storage.googleapis.com/a1aa/image/loa7AuBrRKriAflHuBuzOPga21nJpMTsDqmPKfFuzOo.jpg"
+              width="100"
+            />
+            <img
+              alt="Black and white image of children"
+              class="w-24 h-24 object-cover rounded"
+              height="100"
+              src="https://storage.googleapis.com/a1aa/image/loa7AuBrRKriAflHuBuzOPga21nJpMTsDqmPKfFuzOo.jpg"
+              width="100"
+            />
+          </div>
+        </div>
+      </div>
+      <!-- FAQ -->
+      <div class="max-w-4xl mx-auto mt-8 pt p-6">
+        <h1 class="text-3xl font-bold mb-6">Frequently Asked Questions.</h1>
+        <div class="space-y-4">
+          <div class="flex justify-between items-center border-b py-4">
+            <span class="text-lg">How Can I Make Donation?</span>
+            <i class="fas fa-plus"></i>
+          </div>
+          <div class="flex justify-between items-center border-b py-4">
+            <span class="text-lg">Is My Donation Tax-Deductible?</span>
+            <i class="fas fa-plus"></i>
+          </div>
+          <div class="flex justify-between items-center border-b py-4">
+            <span class="text-lg"
+              >Can I Donate In Honor Or Memory Of Someone?</span
+            >
+            <i class="fas fa-plus"></i>
+          </div>
+          <div class="flex justify-between items-center border-b py-4">
+            <span class="text-lg">How Will My Donation Be Used?</span>
+            <i class="fas fa-plus"></i>
+          </div>
+          <div class="flex justify-between items-center border-b py-4">
+            <span class="text-lg">Can I Set Up A Recurring Donation?</span>
+            <i class="fas fa-plus"></i>
+          </div>
+        </div>
+      </div>
     </main>
 
-    <div
-      class="image-container mb-8"
-      data-aos="fade-up"
-      data-aos-duration="2000"
-    >
-      <img
-        src="https://cdn.dribbble.com/userupload/17238238/file/original-503c7f409ce567ca71b89bb73ca0c5fe.png"
-        alt="Fund Crowdfunding"
-        class="w-full rounded-lg"
-      />
-    </div>
-
-    <footer class="bg-gray-100 p-4" data-aos="fade-up" data-aos-duration="800">
-      <div class="container mx-auto text-center">
-        <p class="text-sm">© 2025 Dribbble</p>
-        <ul class="flex justify-center space-x-4">
-          <li>
-            <a href="#" class="text-gray-600 hover:text-blue-500">Terms</a>
-          </li>
-          <li>
-            <a href="#" class="text-gray-600 hover:text-blue-500">Privacy</a>
-          </li>
-          <li>
-            <a href="#" class="text-gray-600 hover:text-blue-500">Cookies</a>
-          </li>
-        </ul>
+    <footer class="bg-black text-white py-8">
+      <div class="container mx-auto px-4">
+        <div class="flex flex-col md:flex-row justify-between items-center">
+          <div class="mb-6 md:mb-0">
+            <div class="flex items-center mb-4">
+              <img
+                alt="Logo"
+                class="mr-2"
+                height="30"
+                src="https://storage.googleapis.com/a1aa/image/T2ubu2c5O_sFsq-MRb133XpW2ZHhlNrPpHKq2N2BhaI.jpg"
+                width="30"
+              />
+              <span class="text-xl font-bold"> Fund </span>
+            </div>
+            <p class="text-sm">
+              Elevating Experience &amp; Seize Control Of Your Smart Home!
+            </p>
+          </div>
+          <div class="flex flex-col md:flex-row md:space-x-12 mb-6 md:mb-0">
+            <div class="mb-4 md:mb-0">
+              <h3 class="font-semibold mb-2">Donate</h3>
+              <ul class="space-y-1 text-sm">
+                <li>Education</li>
+                <li>Social</li>
+                <li>Medicine</li>
+                <li>Disaster</li>
+              </ul>
+            </div>
+            <div class="mb-4 md:mb-0">
+              <h3 class="font-semibold mb-2">Help</h3>
+              <ul class="space-y-1 text-sm">
+                <li>FAQ</li>
+                <li>Privacy Policy</li>
+                <li>Accessibility</li>
+                <li>Contact Us</li>
+              </ul>
+            </div>
+            <div>
+              <h3 class="font-semibold mb-2">Company</h3>
+              <ul class="space-y-1 text-sm">
+                <li>About Us</li>
+                <li>Careers</li>
+                <li>Services</li>
+                <li>Pricing</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div
+          class="border-t border-gray-700 mt-6 pt-6 flex flex-col md:flex-row justify-between items-center"
+        >
+          <p class="text-sm mb-4 md:mb-0">©FundInc.2023 All Rights Reserved.</p>
+          <div class="flex space-x-4">
+            <a
+              class="flex items-center space-x-2 bg-gray-800 px-4 py-2 rounded-full"
+              href="#"
+            >
+              <i class="fab fa-instagram"> </i>
+              <span> Instagram </span>
+            </a>
+            <a
+              class="flex items-center space-x-2 bg-gray-800 px-4 py-2 rounded-full"
+              href="#"
+            >
+              <i class="fab fa-facebook"> </i>
+              <span> Facebook </span>
+            </a>
+            <a
+              class="flex items-center space-x-2 bg-gray-800 px-4 py-2 rounded-full"
+              href="#"
+            >
+              <i class="fab fa-twitter"> </i>
+              <span> Twitter </span>
+            </a>
+            <a
+              class="flex items-center space-x-2 bg-gray-800 px-4 py-2 rounded-full"
+              href="#"
+            >
+              <i class="fab fa-linkedin"> </i>
+              <span> LinkedIn </span>
+            </a>
+          </div>
+        </div>
       </div>
     </footer>
     <script src="./node_modules/aos/dist/aos.js"></script>
